atualizações estudos git

--- a/style.css
+++ b/style.css
@@ -20,6 +20,22 @@ body, button, input {
   font-family: "DM Sans", sans-serif;
 }
 
+button{
+  background-color:#7879F1;
+  color: white;
+  font-weight: bold;
+  border-radius: 0 .4rem .4rem 0;
+  cursor: pointer; /*para ter a mãozinha do mouse*/
+
+  transition: background .3s; /*para suavizar a transição do fundo, tem que deixar no botão 
+  pois sempre vai ficar no botão conforme passa o mouse*/
+
+}
+
+button:hover {
+  background-color:#6363ce;
+}
+
 .hide{
 display: none;
 }
@@ -70,12 +86,7 @@ input {
   border-radius:.4rem 0 0 .4rem;
 }
 
-button{
-  background-color:#7879F1;
-  color: white;
-  font-weight: bold;
-  border-radius: 0 .4rem .4rem 0;
-}
+
 
 /*screen2*/
 h2{
@@ -83,4 +94,8 @@ h2{
   font-weight: normal;
 
   margin-bottom: 3.3rem;
+}
+
+.screen2 button {
+  border-radius: .4rem;
 }
